[package]
name = "goap-rs"
version = "0.1.0"
edition = "2021"
description = "A Goal-Oriented Action Planning (GOAP) implementation in Rust"
license = "MIT"
repository = "https://github.com/yourusername/goap-rs"
readme = "README.md"

[dependencies]
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
flamegraph = "0.6.8"
